syntax = "proto3";
option optimize_for = LITE_RUNTIME;
package osmnano;

import "fileformat.proto";

message Task {
    uint64 id = 1;
    uint64 data_offset = 2;
    string filename = 3;
    OSMPBF.BlobHeader blob_header = 4;
}

message TaskStatus {
    uint64 id = 1;
    enum Status {
        SUCCESS = 0;
        FAILED = 1;
    }
    Status status = 2;
}
